weather_aggregator-feature-iac-networking/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: weather-service
  namespace: weather
spec:
  type: NodePort
  selector:
    app: weather
  ports:
    - port: 80
      targetPort: 5000
      nodePort: 30080
